--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-datepicker": "^8.4.0",
